--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <main>
         <nav>
             <ul>
-                <li>About</li>
-                <li>My Work</li>
-                <li>Contact Me</li>
+                <li><a href="#welcome">About</a></li>
+                <li><a href="#work">My Work</a></li>
+                <li><a href="#contact">Contact Me</a></li>
             </ul>
         </nav>
         <section id="welcome">
@@ -25,21 +25,36 @@
         </section>
         <section id="work">
             <h1>Here is some of my work</h1>
-            <div class="Tribute-page">
-                <img src="Norman-Borlaug.webp" alt="Project Image">
-                <h3>Tribute-page</h3>
-                <a href="https://mahdimalkawi1.github.io/Tribute-Page/">View Project</a>
+            <div class="card-container">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="Norman-Borlaug.webp" alt="Project Image">
+                    </div>
+                    <div class="card-content">
+                        <h3>Tribute-page</h3>
+                        <a href="https://mahdimalkawi1.github.io/Tribute-Page/">View Project</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="pexels-photo-1407322.webp" alt="Project Image">
+                    </div>
+                    <div class="card-content">
+                        <h3>product-landing</h3>
+                        <a href="https://mahdimalkawi1.github.io/product-landing/">View Project</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="image-blog-revel-top-java-tools.jpg" alt="Project Image">
+                    </div>
+                    <div class="card-content">
+                        <h3>Technical-Documentation</h3>
+                        <a href="https://mahdimalkawi1.github.io/Technical-Documentation/">View Project</a>
+                    </div>
+                </div>
             </div>
-            <div class="product-landing">
-                <img src="pexels-photo-1407322.webp" alt="Project Image">
-                <h3>product-landinge</h3>
-                <a href="https://mahdimalkawi1.github.io/product-landing/">View Project</a>
-            </div>
-            <div class="Technical-Documentation">
-                <img src="image-blog-revel-top-java-tools.jpg" alt="Project Image">
-                <h3>Technical-Documentation</h3>
-                <a href="https://mahdimalkawi1.github.io/Technical-Documentation/">View Project</a>
-            </div>
+
         </section>
         <section id="contact">
 
